@@ -19,17 +19,19 @@ import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 @Repository
-    public class BrowseSearchRepository {
-        private NamedParameterJdbcTemplate jdbcTemplate;
-        private ResourceLoader resourceLoader;
+public class BrowseSearchRepository {
+        private static final Logger LOGGER = LoggerFactory.getLogger(BrowseSearchRepository.class);
+
+        private final NamedParameterJdbcTemplate jdbcTemplate;
+        private final ResourceLoader resourceLoader;
 
         @Autowired
         public BrowseSearchRepository(NamedParameterJdbcTemplate jdbcTemplate, ResourceLoader resourceLoader) {
@@ -37,70 +39,71 @@ import java.util.Set;
             this.resourceLoader = resourceLoader;
         }
 
-        public BrowseQueryResponse findMatchingCompounds(BrowseSearchRequest queryData) throws IOException {
-                String sql = loadSqlQuery("classpath:sql/browse_compound_search_query.sql");
-                List<Compound> compounds = buildParams(queryData, sql);
-                return new BrowseQueryResponse(compounds);
+    public BrowseQueryResponse findMatchingCompounds(BrowseSearchRequest queryData) throws IOException {
+        String sqlTemplate = loadSqlQuery("classpath:sql/browse_compound_search_query.sql");
+        QueryParts queryParts = buildQuery(sqlTemplate, queryData);
+        List<Compound> compounds = executeQuery(queryParts);
+        return new BrowseQueryResponse(compounds);
         }
 
-        private String loadSqlQuery(String resourcePath) throws IOException {
-            Resource resource = resourceLoader.getResource(resourcePath);
-            return new String(Files.readAllBytes(Paths.get(resource.getURI())));
+    private String loadSqlQuery(String resourcePath) throws IOException {
+        Resource resource = resourceLoader.getResource(resourcePath);
+        try (InputStream inputStream = resource.getInputStream()) {
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         }
-
-        private List<Compound> buildParams(BrowseSearchRequest queryData, String sql) {
-            MapSqlParameterSource params = new MapSqlParameterSource();
-            List<String> databaseConditions = Database.databaseConditions(queryData.getDatabases());
-            String filterCondition =  "";
-
-            if (!databaseConditions.isEmpty()) {
-                filterCondition += " AND (" + String.join(" OR ", databaseConditions) + ")";
-            }
-
-            CompoundType compoundType = null;
-            if (queryData.getMetaboliteType().equals(MetaboliteType.ONLYLIPIDS)) {
-                compoundType = CompoundType.LIPID;
-            }
-
-            if (compoundType != null) {
-                filterCondition = filterCondition + " AND c.compound_type = " + compoundType.getDbValue();
-            }
-            sql = sql.replace("(:databaseFilterCondition)", filterCondition);
-
-            String nameFilterBlock = "";
-            String compoundName = queryData.getCompoundName();
-            if (compoundName != null && compoundName.trim().length() >= 3) {
-                String operator = queryData.isExactName() ? "LIKE" : "ILIKE";
-                String value = queryData.isExactName() ? compoundName : "%" + compoundName + "%";
-                nameFilterBlock = "(c.compound_name " + operator + " '" + value + "')";
-                sql = sql.replace("(:compoundNameFilter)", nameFilterBlock);
-            }else{
-                sql = sql.replace("AND (:compoundNameFilter)", "");
-            }
-
-            String formula = queryData.getFormula();
-            if (formula == null || formula.isBlank()) {
-                sql = sql.replace("(:formula)", "%");
-            } else {
-                sql = sql.replace("(:formula)", formula);
-            }
-
-            Set<Compound> compoundsSet = new HashSet<>();
-
-            jdbcTemplate.query(sql, params, rs -> {
-                while (rs.next()) {
-                    CompoundDTO dto = CompoundMapper.fromResultSet(rs);
-                    Compound compound = CompoundMapper.toCompound(dto);
-                    compoundsSet.add(compound);
-                    System.out.printf("%s\n",CompoundMapper.toCompound(dto).getCompoundName()+" formula: "+CompoundMapper.toCompound(dto).getFormula());
-                }
-                return compoundsSet;
-            });
-
-            Logger logger = LoggerFactory.getLogger(getClass());
-            logger.info("QUERY: {} ", sql);
-
-            return new ArrayList<>(compoundsSet);
     }
+
+    private QueryParts buildQuery(String sqlTemplate, BrowseSearchRequest request) {
+        MapSqlParameterSource params = new MapSqlParameterSource();
+        String sql = sqlTemplate;
+
+        Set<Database> databases = request.getDatabases() == null ? Set.of() : request.getDatabases();
+        List<String> databaseConditions = Database.databaseConditions(databases);
+        StringBuilder filterCondition = new StringBuilder();
+
+        if (!databaseConditions.isEmpty()) {
+            filterCondition.append(" AND (").append(String.join(" OR ", databaseConditions)).append(")");
+        }
+
+        if (request.getMetaboliteType() == MetaboliteType.ONLYLIPIDS) {
+            filterCondition.append(" AND c.compound_type = :compoundType");
+            params.addValue("compoundType", CompoundType.LIPID.getDbValue());
+        }
+        sql = sql.replace("(:databaseFilterCondition)", filterCondition.toString());
+
+        String compoundName = request.getCompoundName();
+        if (compoundName != null && compoundName.trim().length() >= 3) {
+            String operator = request.isExactName() ? "LIKE" : "ILIKE";
+            String value = request.isExactName() ? compoundName : "%" + compoundName + "%";
+            sql = sql.replace("(:compoundNameFilter)", "(c.compound_name " + operator + " :compoundName)");
+            params.addValue("compoundName", value);
+        } else {
+            sql = sql.replace("AND (:compoundNameFilter)", "");
+        }
+
+        String formula = request.getFormula();
+        params.addValue("formula", (formula == null || formula.isBlank()) ? "%" : formula);
+        sql = sql.replace("'(:formula)'", ":formula");
+
+        return new QueryParts(sql, params);
+    }
+
+    private List<Compound> executeQuery(QueryParts queryParts) {
+        Set<Compound> compoundsSet = new HashSet<>();
+
+        jdbcTemplate.query(queryParts.sql(), queryParts.params(), rs -> {
+            while (rs.next()) {
+                CompoundDTO dto = CompoundMapper.fromResultSet(rs);
+                compoundsSet.add(CompoundMapper.toCompound(dto));
+            }
+            return compoundsSet;
+        });
+
+        LOGGER.info("browseSearch executed; matched {} compounds", compoundsSet.size());
+
+        return new ArrayList<>(compoundsSet);
+    }
+
+    private record QueryParts(String sql, MapSqlParameterSource params) {}
 
 }
